@@ -1,7 +1,11 @@
 # -*- Autoconf -*-
 #
-# Copyright (C) 2005-2006 Yann Pouillon
+# Copyright (c) 2005-2007 The ABINIT Group (Yann Pouillon)
 # All rights reserved.
+#
+# This file is part of the ABINIT software package. For license information,
+# please see the COPYING file in the top-level directory of the ABINIT source
+# distribution.
 #
 
 #
@@ -21,8 +25,7 @@ AC_DEFUN([_ABI_CHECK_FC_ABSOFT],
 [dnl Do some sanity checking of the arguments
  m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
 
- AC_MSG_CHECKING([if we are using the ABSoft Fortran compiler])
-
+ dnl AC_MSG_CHECKING([if we are using the ABSoft Fortran compiler])
  fc_info_string=`$1 -V 2> /dev/null`
  abi_result=`echo "${fc_info_string}" | grep '^Pro Fortran'`
  if test "${abi_result}" = ""; then
@@ -31,7 +34,7 @@ AC_DEFUN([_ABI_CHECK_FC_ABSOFT],
   fc_type="UNKNOWN"
   fc_version="UNKNOWN"
  else
-  AC_DEFINE([ABSOFT_FC],1,[Define to 1 if you are using the ABSOFT Fortran compiler])
+  AC_DEFINE([FC_ABSOFT],1,[Define to 1 if you are using the ABSOFT Fortran compiler])
   fc_type="absoft"
   fc_version=`echo "${abi_result}" | sed -e 's/Pro Fortran //'`
   if test "${fc_version}" = "${abi_result}"; then
@@ -39,7 +42,7 @@ AC_DEFUN([_ABI_CHECK_FC_ABSOFT],
   fi
   abi_result="yes"
  fi
- AC_MSG_RESULT(${abi_result})
+ dnl AC_MSG_RESULT(${abi_result})
 ]) # _ABI_CHECK_FC_ABSOFT
 
 
@@ -55,17 +58,20 @@ AC_DEFUN([_ABI_CHECK_FC_COMPAQ],
 [dnl Do some sanity checking of the arguments
  m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
 
- AC_MSG_CHECKING([if we are using the Compaq Fortran compiler])
-
+ dnl AC_MSG_CHECKING([if we are using the Compaq Fortran compiler])
  fc_info_string=`$1 -version 2>&1 | sed -e 's/^	//' | grep '^Compaq Fortran Compiler'`
  abi_result="${fc_info_string}"
+ if test "${abi_result}" = ""; then
+  fc_info_string=`$1 -version 2>&1 | sed -e 's/^	//' | grep '^HP Fortran Compiler'`
+  abi_result="${fc_info_string}"
+ fi
  if test "${abi_result}" = ""; then
   abi_result="no"
   fc_info_string=""
   fc_type="UNKNOWN"
   fc_version="UNKNOWN"
  else
-  AC_DEFINE([COMPAQ_FC],1,[Define to 1 if you are using the COMPAQ Fortran compiler])
+  AC_DEFINE([FC_COMPAQ],1,[Define to 1 if you are using the COMPAQ Fortran compiler])
   fc_type="compaq"
   fc_version=`echo "${abi_result}" | sed -e 's/.* V//;s/-.*//'`
   if test "${fc_version}" = "${abi_result}"; then
@@ -73,7 +79,7 @@ AC_DEFUN([_ABI_CHECK_FC_COMPAQ],
   fi
   abi_result="yes"
  fi
- AC_MSG_RESULT(${abi_result})
+ dnl AC_MSG_RESULT(${abi_result})
 ]) # _ABI_CHECK_FC_COMPAQ
 
 
@@ -89,8 +95,7 @@ AC_DEFUN([_ABI_CHECK_FC_FUJITSU],
 [dnl Do some sanity checking of the arguments
  m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
 
- AC_MSG_CHECKING([if we are using the Fujitsu Fortran compiler])
-
+ dnl AC_MSG_CHECKING([if we are using the Fujitsu Fortran compiler])
  fc_info_string=`$1 -V 2> /dev/null`
  abi_result=`echo "${fc_info_string}" | grep '^Fujitsu Fortran'`
  if test "${abi_result}" = ""; then
@@ -99,7 +104,7 @@ AC_DEFUN([_ABI_CHECK_FC_FUJITSU],
   fc_type="UNKNOWN"
   fc_version="UNKNOWN"
  else
-  AC_DEFINE([FUJITSU_FC],1,[Define to 1 if you are using the FUJITSU Fortran compiler])
+  AC_DEFINE([FC_FUJITSU],1,[Define to 1 if you are using the Fujitsu Fortran compiler])
   fc_type="fujitsu"
   fc_version=`echo "${abi_result}" | sed -e 's/.*Driver //;s/ .*//'`
   if test "${fc_version}" = "${abi_result}"; then
@@ -107,7 +112,7 @@ AC_DEFUN([_ABI_CHECK_FC_FUJITSU],
   fi
   abi_result="yes"
  fi
- AC_MSG_RESULT(${abi_result})
+ dnl AC_MSG_RESULT(${abi_result})
 ]) # _ABI_CHECK_FC_FUJITSU
 
 
@@ -123,8 +128,7 @@ AC_DEFUN([_ABI_CHECK_FC_G95],
 [dnl Do some sanity checking of the arguments
  m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
 
- AC_MSG_CHECKING([if we are using the G95 Fortran compiler])
-
+ dnl AC_MSG_CHECKING([if we are using the G95 Fortran compiler])
  fc_info_string=`$1 --version 2>&1`
  abi_result=`echo "${fc_info_string}" | grep '^G95'`
  if test "${abi_result}" = ""; then
@@ -133,8 +137,8 @@ AC_DEFUN([_ABI_CHECK_FC_G95],
   fc_type="UNKNOWN"
   fc_version="UNKNOWN"
  else
-  AC_DEFINE([GNU_FC],1,[Define to 1 if you are using the GNU Fortran compiler])
-  AC_DEFINE([G95_FC],1,[Define to 1 if you are using the G95 Fortran compiler])
+  AC_DEFINE([FC_GCC],1,[Define to 1 if you are using the GCC Fortran compiler])
+  AC_DEFINE([FC_G95],1,[Define to 1 if you are using the G95 Fortran compiler])
   fc_type="g95"
   fc_version=`echo ${abi_result} | sed -e 's/.*GCC //; s/ .*//'`
   if test "${fc_version}" = "${abi_result}"; then
@@ -142,24 +146,23 @@ AC_DEFUN([_ABI_CHECK_FC_G95],
   fi
   abi_result="yes"
  fi
- AC_MSG_RESULT(${abi_result})
+ dnl AC_MSG_RESULT(${abi_result})
 ]) # _ABI_CHECK_FC_G95
 
 
 
-# _ABI_CHECK_FC_GNU(COMPILER)
+# _ABI_CHECK_FC_GCC(COMPILER)
 # ---------------------------
 #
-# Checks whether the specified Fortran compiler is the GNU Fortran compiler.
+# Checks whether the specified Fortran compiler is the GCC Fortran compiler.
 # If yes, tries to determine its version number and sets the fc_type
 # and fc_version variables accordingly.
 #
-AC_DEFUN([_ABI_CHECK_FC_GNU],
+AC_DEFUN([_ABI_CHECK_FC_GCC],
 [dnl Do some sanity checking of the arguments
  m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
 
- AC_MSG_CHECKING([if we are using the GNU Fortran compiler])
-
+ dnl AC_MSG_CHECKING([if we are using the GCC Fortran compiler])
  fc_info_string=`$1 --version 2>&1`
  abi_result=`echo "${fc_info_string}" | grep '^GNU Fortran 95'`
  if test "${abi_result}" = ""; then
@@ -168,16 +171,49 @@ AC_DEFUN([_ABI_CHECK_FC_GNU],
   fc_type="UNKNOWN"
   fc_version="UNKNOWN"
  else
-  AC_DEFINE([GNU_FC],1,[Define to 1 if you are using the GNU Fortran compiler])
-  fc_type="gnu"
-  fc_version=`echo ${abi_result} | sed -e 's/.*GCC //; s/ .*//'`
+  AC_DEFINE([FC_GCC],1,[Define to 1 if you are using the GNU Fortran compiler])
+  fc_type="gcc"
+  fc_version=`echo ${abi_result} | sed -e 's/.*(GCC) //; s/.*GCC //; s/ .*//'`
   if test "${fc_version}" = "${abi_result}"; then
    fc_version="UNKNOWN"
   fi
   abi_result="yes"
  fi
- AC_MSG_RESULT(${abi_result})
-]) # _ABI_CHECK_FC_GNU
+ dnl AC_MSG_RESULT(${abi_result})
+]) # _ABI_CHECK_FC_GCC
+
+
+
+# _ABI_CHECK_FC_HITACHI(COMPILER)
+# -------------------------------
+#
+# Checks whether the specified Fortran compiler is the Hitachi Fortran compiler.
+# If yes, tries to determine its version number and sets the fc_type
+# and fc_version variables accordingly.
+#
+AC_DEFUN([_ABI_CHECK_FC_HITACHI],
+[dnl Do some sanity checking of the arguments
+ m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
+
+ dnl AC_MSG_CHECKING([if we are using the Hitachi Fortran compiler])
+ fc_info_string=`$1 -V 2> /dev/null`
+ abi_result=`echo "${fc_info_string}" | grep '^Hitachi Fortran'`
+ if test "${abi_result}" = ""; then
+  abi_result="no"
+  fc_info_string=""
+  fc_type="UNKNOWN"
+  fc_version="UNKNOWN"
+ else
+  AC_DEFINE([FC_HITACHI],1,[Define to 1 if you are using the Hitachi Fortran compiler])
+  fc_type="hitachi"
+  fc_version=`echo "${abi_result}" | sed -e 's/.*Driver //;s/ .*//'`
+  if test "${fc_version}" = "${abi_result}"; then
+   fc_version="UNKNOWN"
+  fi
+  abi_result="yes"
+ fi
+ dnl AC_MSG_RESULT(${abi_result})
+]) # _ABI_CHECK_FC_HITACHI
 
 
 
@@ -192,8 +228,7 @@ AC_DEFUN([_ABI_CHECK_FC_IBM],
 [dnl Do some sanity checking of the arguments
  m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
 
- AC_MSG_CHECKING([if we are using the IBM XL Fortran compiler])
-
+ dnl AC_MSG_CHECKING([if we are using the IBM XL Fortran compiler])
  fc_info_string=`$1 -qversion 2>&1`
  fc_garbage=`$1 -qversion 2>&1 | wc -l | sed -e 's/ //g'`
  abi_result=`echo "${fc_info_string}" | grep 'IBM(R) XL Fortran'`
@@ -206,13 +241,13 @@ AC_DEFUN([_ABI_CHECK_FC_IBM],
   fc_type="UNKNOWN"
   fc_version="UNKNOWN"
   if test "${fc_garbage}" -gt 50; then
-   AC_DEFINE([IBM_FC],1,[Define to 1 if you are using the IBM XL Fortran compiler])
+   AC_DEFINE([FC_IBM],1,[Define to 1 if you are using the IBM XL Fortran compiler])
    fc_type="ibm"
    fc_version="UNKNOWN"
    abi_result="yes"
   fi
  else
-  AC_DEFINE([IBM_FC],1,[Define to 1 if you are using the IBM XL Fortran compiler])
+  AC_DEFINE([FC_IBM],1,[Define to 1 if you are using the IBM XL Fortran compiler])
   fc_type="ibm"
   fc_version=`echo "${abi_result}" | sed -e 's/.* V\([[0-9\.]]*\) .*/\1/'`
   if test "${fc_version}" = "${abi_result}"; then
@@ -220,7 +255,7 @@ AC_DEFUN([_ABI_CHECK_FC_IBM],
   fi
   abi_result="yes"
  fi
- AC_MSG_RESULT(${abi_result})
+ dnl AC_MSG_RESULT(${abi_result})
 ]) # _ABI_CHECK_FC_IBM
 
 
@@ -236,8 +271,7 @@ AC_DEFUN([_ABI_CHECK_FC_INTEL],
 [dnl Do some sanity checking of the arguments
  m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
 
- AC_MSG_CHECKING([if we are using the Intel Fortran compiler])
-
+ dnl AC_MSG_CHECKING([if we are using the Intel Fortran compiler])
  fc_info_string=`$1 -v -V 2>&1 | sed -e '/^ifc: warning/d'`
  abi_result=`echo "${fc_info_string}" | grep '^Intel(R) Fortran'`
  if test "${abi_result}" = ""; then
@@ -246,7 +280,7 @@ AC_DEFUN([_ABI_CHECK_FC_INTEL],
   fc_type="UNKNOWN"
   fc_version="UNKNOWN"
  else
-  AC_DEFINE([INTEL_FC],1,[Define to 1 if you are using the Intel Fortran compiler])
+  AC_DEFINE([FC_INTEL],1,[Define to 1 if you are using the Intel Fortran compiler])
   fc_type="intel"
   fc_version=`echo "${fc_info_string}" | grep '^Version' | sed -e 's/Version //;s/ .*//;s/ //g' | head -n 1`
   if test "${fc_version}" = ""; then
@@ -254,7 +288,7 @@ AC_DEFUN([_ABI_CHECK_FC_INTEL],
   fi
   abi_result="yes"
  fi
- AC_MSG_RESULT(${abi_result})
+ dnl AC_MSG_RESULT(${abi_result})
 ]) # _ABI_CHECK_FC_INTEL
 
 
@@ -271,8 +305,7 @@ AC_DEFUN([_ABI_CHECK_FC_MIPSPRO],
 [dnl Do some sanity checking of the arguments
  m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
 
- AC_MSG_CHECKING([if we are using the MIPSpro Fortran compiler])
-
+ dnl AC_MSG_CHECKING([if we are using the MIPSpro Fortran compiler])
  fc_info_string=`$1 -version 2>&1 | sed -e '/^$/d'`
  abi_result=`echo "${fc_info_string}" | grep '^MIPSpro'`
  if test "${abi_result}" = ""; then
@@ -281,7 +314,7 @@ AC_DEFUN([_ABI_CHECK_FC_MIPSPRO],
   fc_type="UNKNOWN"
   fc_version="UNKNOWN"
  else
-  AC_DEFINE([MIPSPRO_FC],1,[Define to 1 if you are using the MIPSpro Fortran compiler])
+  AC_DEFINE([FC_MIPSPRO],1,[Define to 1 if you are using the MIPSpro Fortran compiler])
   fc_type="mipspro"
   fc_version=`echo "${abi_result}" | sed -e 's/.*Version //'`
   if test "${fc_version}" = "${abi_result}"; then
@@ -289,7 +322,7 @@ AC_DEFUN([_ABI_CHECK_FC_MIPSPRO],
   fi
   abi_result="yes"
  fi
- AC_MSG_RESULT(${abi_result})
+ dnl AC_MSG_RESULT(${abi_result})
 ]) # _ABI_CHECK_FC_MIPSPRO
 
 
@@ -306,8 +339,7 @@ AC_DEFUN([_ABI_CHECK_FC_PATHSCALE],
 [dnl Do some sanity checking of the arguments
  m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
 
- AC_MSG_CHECKING([if we are using the PathScale Fortran compiler])
-
+ dnl AC_MSG_CHECKING([if we are using the PathScale Fortran compiler])
  fc_info_string=`$1 -version 2>&1`
  abi_result=`echo "${fc_info_string}" | grep '^PathScale'`
  if test "${abi_result}" = ""; then
@@ -316,7 +348,7 @@ AC_DEFUN([_ABI_CHECK_FC_PATHSCALE],
   fc_type="UNKNOWN"
   fc_version="UNKNOWN"
  else
-  AC_DEFINE([PATHSCALE_FC],1,[Define to 1 if you are using the PathScale Fortran compiler])
+  AC_DEFINE([FC_PATHSCALE],1,[Define to 1 if you are using the PathScale Fortran compiler])
   fc_type="pathscale"
   fc_version=`echo "${abi_result}" | sed -e 's/.* Version //; s/ .*//'`
   if test "${fc_version}" = "${abi_result}"; then
@@ -324,7 +356,7 @@ AC_DEFUN([_ABI_CHECK_FC_PATHSCALE],
   fi
   abi_result="yes"
  fi
- AC_MSG_RESULT(${abi_result})
+ dnl AC_MSG_RESULT(${abi_result})
 ]) # _ABI_CHECK_FC_PATHSCALE
 
 
@@ -341,8 +373,7 @@ AC_DEFUN([_ABI_CHECK_FC_PGI],
 [dnl Do some sanity checking of the arguments
  m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
 
- AC_MSG_CHECKING([if we are using the Portland Group Fortran compiler])
-
+ dnl AC_MSG_CHECKING([if we are using the Portland Group Fortran compiler])
  fc_info_string=`$1 -V 2>&1 | sed -e '/^$/d'`
  abi_result=`echo "${fc_info_string}" | grep '^pgf9[[05]]' | grep -v 'No files to process'`
  if test "${abi_result}" = ""; then
@@ -351,7 +382,7 @@ AC_DEFUN([_ABI_CHECK_FC_PGI],
   fc_type="UNKNOWN"
   fc_version="UNKNOWN"
  else
-  AC_DEFINE([PGI_FC],1,[Define to 1 if you are using the Portland Group Fortran compiler])
+  AC_DEFINE([FC_PGI],1,[Define to 1 if you are using the Portland Group Fortran compiler])
   fc_type="pgi"
   fc_version=`echo "${abi_result}" | sed -e 's/.* //; s/-.*//'`
   if test "${fc_version}" = "${abi_result}"; then
@@ -359,7 +390,7 @@ AC_DEFUN([_ABI_CHECK_FC_PGI],
   fi
   abi_result="yes"
  fi
- AC_MSG_RESULT(${abi_result})
+ dnl AC_MSG_RESULT(${abi_result})
 ]) # _ABI_CHECK_FC_PGI
 
 
@@ -375,25 +406,24 @@ AC_DEFUN([_ABI_CHECK_FC_SUN],
 [dnl Do some sanity checking of the arguments
  m4_if([$1], , [AC_FATAL([$0: missing argument 1])])dnl
 
- AC_MSG_CHECKING([if we are using the Sun WorkShop Fortran compiler])
-
- fc_info_string=`$1 -V 2>&1`
- abi_result=`echo "${fc_info_string}" | grep 'Sun Fortran 95'`
+ dnl AC_MSG_CHECKING([if we are using the Sun WorkShop Fortran compiler])
+ fc_info_string=`$1 -V 2>&1 | head -n 1`
+ abi_result=`echo "${fc_info_string}" | grep 'Sun' | grep 'Fortran 95'`
  if test "${abi_result}" = ""; then
   abi_result="no"
   fc_info_string=""
   fc_type="UNKNOWN"
   fc_version="UNKNOWN"
  else
-  AC_DEFINE([SUN_FC],1,[Define to 1 if you are using the Sun WorkShop])
+  AC_DEFINE([FC_SUN],1,[Define to 1 if you are using the Sun WorkShop])
   fc_type="sun"
-  fc_version="x"
-  if test "${fc_version}" = ""; then
+  fc_version=`echo "${abi_result}" | sed -e 's/.* Fortran 95 //;s/ .*//'`
+  if test "${fc_version}" = "${abi_result}" -o "${fc_version}" = ""; then
    fc_version="UNKNOWN"
   fi
   abi_result="yes"
  fi
- AC_MSG_RESULT(${abi_result})
+ dnl AC_MSG_RESULT(${abi_result})
 ]) # _ABI_CHECK_FC_SUN
 
 
@@ -411,7 +441,7 @@ AC_DEFUN([ABI_CHECK_FORTRAN_EXIT],
 [dnl Init
  fc_has_exit="no"
 
- AC_MSG_CHECKING([whether the Fortran compiler accepts exit()])
+ dnl AC_MSG_CHECKING([whether the Fortran compiler accepts exit()])
 
  dnl Try to compile a program calling exit()
  AC_LANG_PUSH([Fortran])
@@ -426,7 +456,7 @@ AC_DEFUN([ABI_CHECK_FORTRAN_EXIT],
    [Define to 1 if your Fortran compiler supports exit()])
  fi
 
- AC_MSG_RESULT(${fc_has_exit})
+ dnl AC_MSG_RESULT(${fc_has_exit})
 ]) # ABI_CHECK_FORTRAN_EXIT
 
 
@@ -447,14 +477,16 @@ AC_DEFUN([ABI_PROG_FC],
  fc_wrap="no"
 
  dnl Determine Fortran compiler type (the order is important)
+ AC_MSG_CHECKING([which type of Fortran compiler we have])
+
  if test "${fc_type}" = "UNKNOWN"; then
   _ABI_CHECK_FC_G95(${FC})
  fi
  if test "${fc_type}" = "UNKNOWN"; then
-  _ABI_CHECK_FC_INTEL(${FC})
+  _ABI_CHECK_FC_GCC(${FC})
  fi
  if test "${fc_type}" = "UNKNOWN"; then
-  _ABI_CHECK_FC_GNU(${FC})
+  _ABI_CHECK_FC_INTEL(${FC})
  fi
  if test "${fc_type}" = "UNKNOWN"; then
   _ABI_CHECK_FC_PATHSCALE(${FC})
@@ -477,10 +509,25 @@ AC_DEFUN([ABI_PROG_FC],
  if test "${fc_type}" = "UNKNOWN"; then
   _ABI_CHECK_FC_SUN(${FC})
  fi
+ if test "${fc_type}" = "UNKNOWN"; then
+  _ABI_CHECK_FC_HITACHI(${FC})
+ fi
  dnl Always keep that one at the end
  if test "${fc_type}" = "UNKNOWN"; then
   _ABI_CHECK_FC_IBM(${FC})
  fi
+
+ dnl Fall back to generic when detection fails
+ if test "${fc_type}" = "UNKNOWN"; then
+  fc_type="generic"
+  fc_version="0.0"
+ fi
+
+ dnl Normalise Fortran compiler version
+ fc_version=`echo ${fc_version} | cut -d. -f1-2`
+
+ dnl Display final result
+ AC_MSG_RESULT([${fc_type} ${fc_version}])
 
  dnl Schedule compiler info for substitution
  AC_SUBST(fc_type)
